Replace from litecoin to blackcoin terms

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 src/*.exe
-src/litecoin
-src/litecoind
-src/test_litecoin
+src/blackcoin
+src/blackcoind
+src/test_blackcoin
 src/build.h
 .*.swp
 *.*~*
@@ -14,7 +14,7 @@ src/build.h
 #compilation and Qt preprocessor part
 *.qm
 Makefile
-litecoin-qt
+blackcoin-qt
 #resources cpp
 qrc_*.cpp
 #qt creator
